--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "redux-essentials-example",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/feedback",
+  "homepage": "https://AravindaTangirala.github.io/fms_frontend/feedback",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
+    "gh-pages": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -22,6 +23,8 @@
     "redux-saga": "^1.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
