home page added

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "redux-essentials-example",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AravindaTangirala.github.io/fms_frontend",
+  "homepage": "https://AravindaTangirala.github.io/fms_frontend/feedback",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
