--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
+    "gh-pages": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -21,7 +22,7 @@
     "redux-saga": "^1.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
